--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.12",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.0",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "svix": "^1.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
