--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "micro": "^10.0.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
